<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.cait.lagrand_pset3.ResultsActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:background="@null"
            android:src="@drawable/home_button_normal"
            android:layout_gravity="start"
            android:onClick="goHome"
            android:contentDescription="@string/home" />

        <TextView
            android:text="@string/movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:id="@+id/watchListText"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:background="@null"
            android:src="@drawable/eyes_icon"
            android:layout_gravity="center"
            android:id="@+id/toWatchListButton"
            android:onClick="toWatchList"
            android:contentDescription="@string/watchlist" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/sym_def_app_icon"
                    android:layout_gravity="bottom"
                    android:id="@+id/posterImage"
                    android:contentDescription="@string/movie"  />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:gravity="end">


                    <TextView
                        android:text="@string/rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratedText"/>
                    <TextView
                        android:text="@string/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/genreText"/>
                    <TextView
                        android:text="@string/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/releaseText"/>
                    <TextView
                        android:text="@string/director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/directorText"/>
                    <TextView
                        android:text="@string/run_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/timeText"/>
                </LinearLayout>
            </LinearLayout>

                <TextView
                    android:text="@string/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:textSize="30sp"
                    android:id="@+id/titleText" />

                <TextView
                    android:text="@string/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:id="@+id/descriptionText" />

                <Button
                    android:text="@string/add_to_watchlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/addWatchlistButton"
                    android:visibility="invisible"
                    android:onClick="addToWatchList"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>