<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cait.lagrand_pset3.HomeActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/headerLayout">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:background="@null"
            android:src="@drawable/home_button_normal"
            android:layout_gravity="start"
            android:onClick="goHome"
            android:contentDescription="@string/home" />

        <TextView
            android:text="@string/movie_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:id="@+id/watchListText"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ImageButton
            android:text="@string/watchlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:background="@null"
            android:src="@drawable/eyes_icon"
            android:layout_gravity="center"
            android:id="@+id/toWatchListButton"
            android:onClick="toWatchList"
            android:contentDescription="@string/watchlist" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/headerLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/video"
            android:contentDescription="@string/video" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/movie_title"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="start"
                android:id="@+id/searchText" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_search"
                android:layout_gravity="end"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:background="@null"
                android:id="@+id/searchButton"
                android:onClick="search"
                android:contentDescription="@string/search"  />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
