<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_watchlist"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.cait.lagrand_pset3.WatchlistActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:background="@null"
            android:src="@drawable/home_button_normal"
            android:layout_gravity="start"
            android:onClick="goHome"
            android:contentDescription="@string/home" />

        <TextView
            android:text="@string/watchlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:id="@+id/watchListText"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:background="@null"
            android:src="@drawable/eyes_icon"
            android:layout_gravity="center"
            android:id="@+id/toWatchListButton"
            android:onClick="toWatchList"
            android:contentDescription="@string/watchlist" />

    </LinearLayout>


    <TextView
        android:text="@string/empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/emptyListText" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/watchlistView"/>
</LinearLayout>